Thu Nov  1 10:43:49 2001  Gary Wong  <gtw@research.att.com>

	* analysis.c (AnalyzeMove, AnalyzeGame, CommandAnalyseMatch): Handle
	interruptions/errors.
	* eval.c (FindnSaveBestMoves): Clean up *pml when reporting
	interruption/error.
	
	* database.c, external.c, gnubg.c, latex.c, postscript.c, sgf.c: Call
	NextToken to dequote filename parameters.
	* gtkgame.c (FileCommand): Quote the specified filename.
	* gnubg.c (NextToken): Change the quote character from `\' to `%' on
	MS DOS/Windows.

	* gtkboard.c (board_quick_edit): New function.  Revise edit mode
	(contributed by John Chuang).
	
Wed Oct 31 14:00:12 2001  Gary Wong  <gtw@research.att.com>

	* gtk-multiview.c (gtk_multiview_expose): Eliminate redundant function
	under GTK 1.3/2.0.

Wed Oct 31 10:59:18 2001  Gary Wong  <gtw@research.att.com>

	* gtkboard.c, gtkgame.c: Work on support for GTK 1.3/2.0.  Several bugs
	remain.

Tue Oct 30 11:10:58 2001  Gary Wong  <gtw@research.att.com>

	* eval.h: Change several members of evalcontext to bitfields.
	
	* eval.c (EvaluatePositionCache): Cache evaluations above 0-ply in
	matches.
	(LogCube): New function.

	* gnubg.c (NextToken): Implement quoting rules.

	* gtkgame.c: Change page_size parameter of gtk_adjustment_new() calls
	to 0 where appropriate.

	* play.c (ComputerTurn): Don't bother to consider resigning in
	contact positions.

Mon Oct 29 17:07:32 2001  Gary Wong  <gtw@research.att.com>

	* database.c (CommandDatabaseImport): Use GDBM_WRCREAT.

	* import.c (ImportGame): Cope with longer lines, and ignore games
	after the end of match (reported by Nick Bratby).

Mon Oct 29 11:28:26 2001  Gary Wong  <gtw@research.att.com>

	* database.c (CommandDatabaseVerify): Check for errors on gdbm_fetch()
	and gdbm_store() calls.

Mon Oct 29 11:07:28 2001  Gary Wong  <gtw@research.att.com>

	* play.c (NextTurn): Return without scheduling another NextTurn if
	NewGame fails, e.g. when using manual dice and the user cancels the
	opening roll (reported by Jacques Thiriat).
